# init.lua

./: .gitignore  3  CHANGELOG.md  LEARNING.md  LICENSE  README.md  TODO.md  init.lua  lazy-lock.json  nvim-pack-lock.json
.github/workflows/: release-please.yml
examples/: README.md  example.cisco  example.cmake  example.cpp  example.jl  example.js  example.json  example.ps1  example.py  example.tf  example.ts
ftplugin/: cisco.lua  cmake.lua  cpp.lua  haskell.lua  lua.lua  ps1.lua  terraform.lua
lua/config/: 2q  colors.lua  filetypes.lua  lang.lua  motions.lua  multigrep.lua  osc52.lua  pairs.lua  remap.lua  remote.lua  set.lua
lua/config/coding/: folding.lua  lspconfig.lua  repl.lua
lua/mauriba/: init.lua
lua/mauriba/config/: colorschemes.lua  init.lua  lazy.lua  motions.lua  remap.lua  set.lua
lua/mauriba/plugins/: colors.lua
lua/plugins/: colorschemes.lua  dev.lua  init.lua
lua/plugins/coding/: comments.lua  copilot.lua  debugger.lua  folding.lua  formatting.lua  highlight-colors.lua  (+13 more)
samples/cisco/: sample.cisco
samples/cpp/: CMakeLists.txt  Sample.hpp  compile_commands.json  main.cpp  opengl-cube.cpp
samples/cpp/.cache/clangd/index/: Shader.cpp.6323A3E887DCF3DF.idx  Shader.hpp.6A5260F7576D522E.idx  opengl-cube.cpp.F8D748A00AF8054E.idx
samples/cpp/lib/common/: CMakeLists.txt  Shader.cpp  Shader.hpp
samples/cpp/shaders/: ColorFragmentShader.fragmentshader
samples/haskell/: test.hs
samples/html/: style.css  test.css
samples/powershell/: main.ps1
samples/ps/: test.ps1
samples/terraform/: .gitignore  main.tf  provider.tf  vars.tf
snippets/: all.lua  cpp.lua  lua.lua  tex.lua
(+29 files in other folders)
